tests/paczka1/fuzzy1/89779717.err
Error in line 2: Dqr00F3o4G5 S42 83,9
Error in line 5: Dqr00F3o4G5 A754 37,8
Error in line 7: Hq9eJzAjj S231 5,5
Error in line 21: vWedytw S231 73,6
Error in line 22: vWedytw S42 46,4
Error in line 24: vWedytw A193 50,0
Error in line 30: lXhZTg3n A193 78,3
Error in line 33: Dqr00F3o4G5 A754 28,2
